refactor:依赖版本升级，兼容性调整